[project]
name = "my_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Martin", email = ""},
]
dependencies = [
    "openpyxl>=3.1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
package-type = "application"
